@@ -12,7 +12,8 @@ BINPKG := $(shell awk '/Package:.*[0-9]/{print $$2;}' debian/control)
 LOCALINSTANCEDIR=$(CURDIR)/debian
 VISTA_FOIA_DATE=20130405
 VISTA_FOIA_VERSION=V-0.$(VISTA_FOIA_DATE)
-VISTA_INSTALL_DIR=usr/share/vista-foia/$(VISTA_FOIA_VERSION)
+DESTINATION_DIR=usr/share/vista-foia
+VISTA_INSTALL_DIR=$(DESTINATION_DIR)/$(VISTA_FOIA_VERSION)
 VISTAINSTANCEDIR=$(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)
 GTM_INSTALL_DIR=/usr/lib/fis-gtm/$(UAPIDIR)
 VISTA_GLOBALS_DIR=$(VISTAINSTANCEDIR)/g
@@ -27,7 +28,7 @@ VISTA_M_WORKING_TREE=$(CURDIR)/OSEHRA-VistA-M-897bff2
 VISTA_TESTING_BINARY_DIR=$(CURDIR)/debian/build
 VISTA_TESTING_SOURCE_DIR=$(CURDIR)
 VISTA_TESTING_LOG_DIR=$(VISTA_TESTING_BINARY_DIR)/Temporary/Log
-LOCAL_VISTA_INSTALL_DIR := $(CURDIR)/debian/$(BINPKG)/$(VISTA_INSTALL_DIR)
+
 
 %:
 	dh $@
@@ -74,7 +75,9 @@ cd $(VISTA_TESTING_BINARY_DIR) && make)
 
 
 override_dh_auto_install:
-	dh_auto_install --destdir=debian/$(BINPKG) $@
+	mkdir -p debian/$(BINPKG)/$(DESTINATION_DIR)
+	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR) debian/$(BINPKG)/$(DESTINATION_DIR)
+
 
 get-orig-source:
 	wget -O../OSEHRA-VistA-M-897bff2a.orig.tar.gz https://github.com/OSEHRA/VistA-M/tarball/897bff2a
