@@ -31,5 +31,6 @@ vista-foia (0.20140106-1) UNRELEASED; urgency=low
   * In rules, reorganized build vs config. Leaving compilation only in build.
   * In rules, refining auto_install rule.
   * In rules, remove code to compile .m files. Now moved to CMake itself.
+  * In rules, added final installation rule. Targeting debuild expected dir.
 
  -- Luis Ibanez <luis.ibanez@kitware.com>  Wed, 4 Jul 2012 17:16:45 -0500
